main_structure.css - fix problem with white spaces

--- a/scss/structure/main_structure.scss
+++ b/scss/structure/main_structure.scss
@@ -113,6 +113,7 @@ $neumorphic: inset 5px 5px 5px rgb(49, 49, 49), inset 5px 5px 3px grey;
 }
 
 .entry-body {
+    white-space: pre-wrap;
     padding:20px!important;
     grid-column: 2 /span 2;
     grid-row: 6;
